<resources>
    <string name="app_name">ChatAway</string>
    <string name="hello_world">Hello World!!</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Strings related to login screen -->
    <string name="login">login</string>
    <string name="hint_username">Email</string>
    <string name="hint_password">Password</string>
    <string name="label_dont_have_account">Don\'t Have an account? register here</string>
    <string name="register">Register</string>
    <string name="auth_failed">Authentication failed, please try again.</string>
    <string name="input_error">Please enter your email and password.</string>

</resources>
